php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #67531 syslog cannot be set in pool configuration
Submitted: 2014-06-27 07:42 UTC Modified: 2014-06-27 10:56 UTC
From: remi@php.net Assigned: remi (profile)
Status: Closed Package: FPM related
PHP Version: 5.4.30 OS: GNU/LInux
Private report: No CVE-ID: None
 [2014-06-27 07:42 UTC] remi@php.net
Description:
------------
In pool configuration:
  php_admin_value[error_log] = syslog

This is expanded to /usr/syslog, so doesn't work

error_log=syslog only work in main php.ini




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2014-06-27 07:43 UTC] remi@php.net
-Assigned To: +Assigned To: remi
 [2014-06-27 07:52 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=bf328b16817a9d7dfc7aaf078d4e944ab14ce0e1
Log: Fix Bug #67531 	syslog cannot be set in pool configuration
 [2014-06-27 07:52 UTC] remi@php.net
-Status: Assigned +Status: Closed
 [2014-06-27 10:56 UTC] remi@php.net
-PHP Version: Irrelevant +PHP Version: 5.4.30
 [2014-06-30 20:23 UTC] dmitry@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=bf328b16817a9d7dfc7aaf078d4e944ab14ce0e1
Log: Fix Bug #67531 	syslog cannot be set in pool configuration
 [2014-07-02 01:41 UTC] tyrael@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=bf328b16817a9d7dfc7aaf078d4e944ab14ce0e1
Log: Fix Bug #67531 	syslog cannot be set in pool configuration
 [2014-07-02 08:26 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=bf328b16817a9d7dfc7aaf078d4e944ab14ce0e1
Log: Fix Bug #67531 	syslog cannot be set in pool configuration
 [2014-07-02 08:33 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=bf328b16817a9d7dfc7aaf078d4e944ab14ce0e1
Log: Fix Bug #67531 	syslog cannot be set in pool configuration
 [2014-10-07 23:14 UTC] stas@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=bf328b16817a9d7dfc7aaf078d4e944ab14ce0e1
Log: Fix Bug #67531 	syslog cannot be set in pool configuration
 [2014-10-07 23:25 UTC] stas@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=bf328b16817a9d7dfc7aaf078d4e944ab14ce0e1
Log: Fix Bug #67531 	syslog cannot be set in pool configuration
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 06:00:02 2026 UTC