Fix Bug #67531 	syslog cannot be set in pool configuration

error_log is listed in FPM_PHP_INI_TO_EXPAND,
but should not be expand when value = syslog